--- a/src/main/resources/vm/statList.vm
+++ b/src/main/resources/vm/statList.vm
@@ -19,7 +19,7 @@
     </div>
 </div>
 
-<table id="mango-stats-table"
+<table id="stats-table"
        data-toggle="table"
        data-show-columns="true"
 
